--- a/#source/blocks/_header.html
+++ b/#source/blocks/_header.html
@@ -1,12 +1,34 @@
 <header class="header">
   <div class="container">
     <div class="header__top">
-      <span class="header__subtitle"></span>
-      <div class="header__logo fit-img"></div>
-
+      <span class="header__subtitle">We Ship Everywhere! Free In The Us!</span>
+      <div class="fit-img header__logo"><img src="img/header-logo.png" alt="Food & Drinks"></div>
+      <div style="display: flex; align-items: center">
+        <ul class="user-list">
+          <li class="user-list__item">Login</li>
+          <li class="user-list__item">Register</li>
+          <li class="user-list__item">Wish List (0)</li>
+        </ul>
+        <div class="helping-icons-block">
+          <div class="fit-img header__search-icon"><img src="img/icons/search.svg" alt="Search"></div>
+          <div class="fit-img header__wallet-icon"><img src="img/icons/wallet.svg" alt="Search"></div>
+          <div class="header__burger"><span></span></div>
+        </div>
+      </div>
     </div>
     <!-- /.header__top -->
-    <div class="header__bottom"></div>
+    <div class="header__bottom">
+      <ul class="header-menu">
+        <li class="header-menu__item">Home</li>
+        <li class="header-menu__item">Vintage</li>
+        <li class="header-menu__item">Imperial</li>
+        <li class="header-menu__item">Sparkling</li>
+        <li class="header-menu__item">Accessories</li>
+        <li class="header-menu__item">Blog</li>
+        <li class="header-menu__item">Product Details</li>
+        <li class="header-menu__item">Contact</li>
+      </ul>
+    </div>
     <!-- /.header__bottom -->
   </div>
   <!-- /.container -->
