--- a/#source/index.html
+++ b/#source/index.html
@@ -2,12 +2,12 @@
 <html lang="ru">
 
 <head>
-    <title></title>
+    <title>Food & Drinks</title>
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <!-- <link rel="shortcut icon" type="image/x-icon" href=""> -->
+    <!-- <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
