--- a/#source/index.html
+++ b/#source/index.html
@@ -21,6 +21,13 @@
         <!-- /.main -->
 
 @@include("blocks/_footer.html")
+      <div class="modal exl-modal hidden">
+        <div class="modal__dialog exl-modal__dialog">
+          Sorry, It’s an example link!
+          <button data-close class="fit-img modal__close exl-modal__close"><img src="img/icons/close-icon.svg" alt="X"></button>
+        </div>
+      </div>
+      <!-- .modal -->
     </div>
 @@include("blocks/_js.html")
 </body>
