in process of creating adaptive header

--- a/#source/blocks/_header.html
+++ b/#source/blocks/_header.html
@@ -4,12 +4,12 @@
       <span class="header__subtitle">We Ship Everywhere! Free In The Us!</span>
       <a href="#" class="fit-img header__logo"><img src="img/header-logo.png" alt="Food & Drinks"></a>
       <div style="display: flex; align-items: center">
-        <ul class="user-list">
+        <ul class="user-list header__user-list">
           <li class="user-list__item"><a href="#">Login</a></li>
           <li class="user-list__item"><a href="#">Register</a></li>
           <li class="user-list__item"><a href="#">Wish List (0)</a></li>
         </ul>
-        <div class="helping-icons-block">
+        <div class="helping-icons-block header__helping-icons-block">
           <button class="fit-img header__search-icon"><img src="img/icons/search.svg" alt="Search"></button>
           <button class="fit-img header__wallet-icon"><img src="img/icons/wallet.svg" alt="Search"></button>
           <div style="position: relative">
