create adaptive for header block

--- a/#source/blocks/_header.html
+++ b/#source/blocks/_header.html
@@ -53,7 +53,7 @@
     <!-- /.header__bottom -->
     <div class="search-block">
       <form action="#" class="search-form">
-        <input class="search-form__input" type="search" name="search" id="search" placeholder="Search">
+        <input class="search-form__input" type="search" name="search" id="search" placeholder="Search...">
         <button type="submit" class="fit-img search-form__button"><img src="img/icons/search-black.svg" alt="Search"></button>
       </form>
     </div>
