create header and it adaptive

--- a/#source/index.html
+++ b/#source/index.html
@@ -16,7 +16,23 @@
 @@include("blocks/_header.html")
 
         <main class="main">
-
+          <section class="preview">
+            <div class="container">
+              <div class="preview__body">
+                <span class="preview__subtitle chb">The Experlence of Generations</span>
+                <h1 class="preview__heading chb">In each <span class="yellow">bottle</span></h1>
+                <p class="preview__text text">Experience a true “American Dream” at Winehouse and visit the first tasting room in the United
+                  States established by a former European mirgant vineyard worker and his family.</p>
+                <a href="#" class="preview__link chb underlined exl"><span class="yellow">READ MORE</span></a>
+                <div class="preview__img fit-img">
+                  <img src="img/preview-img.png" alt="Vine photo">
+                </div>
+              </div>
+              <!-- /.preview__body -->
+            </div>
+            <!-- /.container -->
+          </section>
+          <!-- /.preview -->
         </main>
         <!-- /.main -->
 
