create description slider

--- a/#source/index.html
+++ b/#source/index.html
@@ -33,6 +33,94 @@
             <!-- /.container -->
           </section>
           <!-- /.preview -->
+
+          <section class="description-slider">
+            <div class="container">
+              <div class="description-slider__body">
+              <div class="description-slider__wrapper">
+                  <div class="description-slider__inner">
+                    <div class="description-slider__slide description-slider-slide">
+                      <div class="description-slider-slide__description">
+                        <span class="description-slider-slide__type">New Wines</span>
+                        <h2 class="description-slider-slide__title">Merlot</h2>
+                        <span class="description-slider-slide__subtitle">Winehouse Vineyard</span>
+                        <p class="description-slider-slide__text">Merlot is loved for its boisterous black cherry flavors, supple
+                          tannins, and chocolatey finish. On the high end, it’s often
+                          mistaken with Cabernet Sauvignon.</p>
+                        <div class="description-slider-slide__buttons"><button class="learn-more description-slider-slide__learn-button exl">Learn more</button><button class="view-more description-slider-slide__view-button exl">View more</button></div>
+                      </div>
+                      <div class="description-slider-slide__img fit-img"><img src="img/catalog-item-img-4.png" alt="Merlot"></div>
+                    </div>
+                    <!-- description-slider-slide -->
+                    <div class="description-slider__slide description-slider-slide">
+                      <div class="description-slider-slide__description">
+                        <span class="description-slider-slide__type">Old Wines</span>
+                        <h2 class="description-slider-slide__title">Shanti</h2>
+                        <span class="description-slider-slide__subtitle"></span>
+                        <p class="description-slider-slide__text">Shanti is loved for its boisterous black cherry flavors, supple
+                          tannins, and chocolatey finish. On the high end, it’s often
+                          mistaken with Cabernet Sauvignon</p>
+                        <div class="description-slider-slide__buttons"><button class="learn-more description-slider-slide__learn-button exl">Learn more</button><button class="view-more description-slider-slide__view-button exl">View more</button></div>
+                      </div>
+                      <div class="description-slider-slide__img fit-img"><img src="img/catalog-item-img-3.png" alt="Shanti"></div>
+                    </div>
+                    <!-- description-slider-slide -->
+                    <div class="description-slider__slide description-slider-slide">
+                      <div class="description-slider-slide__description">
+                        <span class="description-slider-slide__type">Old Wines</span>
+                        <h2 class="description-slider-slide__title">Falcor</h2>
+                        <span class="description-slider-slide__subtitle"></span>
+                        <p class="description-slider-slide__text">Falcor is loved for its boisterous black cherry flavors, supple
+                          tannins, and chocolatey finish. On the high end, it’s often
+                          mistaken with Cabernet Sauvignon</p>
+                        <div class="description-slider-slide__buttons"><button class="learn-more description-slider-slide__learn-button exl">Learn more</button><button class="view-more description-slider-slide__view-button exl">View more</button></div>
+                      </div>
+                      <div class="description-slider-slide__img fit-img"><img src="img/catalog-item-img-5.png" alt="Falcor"></div>
+                    </div>
+                    <!-- description-slider-slide -->
+                    <div class="description-slider__slide description-slider-slide">
+                      <div class="description-slider-slide__description">
+                        <span class="description-slider-slide__type">New Wines</span>
+                        <h2 class="description-slider-slide__title">Mazzei Siepi</h2>
+                        <span class="description-slider-slide__subtitle"></span>
+                        <p class="description-slider-slide__text">Mazzei Siepi is loved for its boisterous black cherry flavors, supple
+                          tannins, and chocolatey finish. On the high end, it’s often
+                          mistaken with Cabernet Sauvignon</p>
+                        <div class="description-slider-slide__buttons"><button class="learn-more description-slider-slide__learn-button exl">Learn more</button><button class="view-more description-slider-slide__view-button exl">View more</button></div>
+                      </div>
+                      <div class="description-slider-slide__img fit-img"><img src="img/catalog-item-img-6.png" alt="Mazzei Siepi"></div>
+                    </div>
+                    <!-- description-slider-slide -->
+                    <div class="description-slider__slide description-slider-slide">
+                      <div class="description-slider-slide__description">
+                        <span class="description-slider-slide__type">New Wines</span>
+                        <h2 class="description-slider-slide__title">Silver Oak</h2>
+                        <span class="description-slider-slide__subtitle"></span>
+                        <p class="description-slider-slide__text">Silver Oak is loved for its boisterous black cherry flavors, supple
+                          tannins, and chocolatey finish. On the high end, it’s often
+                          mistaken with Cabernet Sauvignon</p>
+                        <div class="description-slider-slide__buttons"><button class="learn-more description-slider-slide__learn-button exl">Learn more</button><button class="view-more description-slider-slide__view-button exl">View more</button></div>
+                      </div>    
+                      <div class="description-slider-slide__img fit-img"><img src="img/catalog-item-img-1.png" alt="Silver Oak"></div>
+                    </div>
+                    <!-- description-slider-slide -->
+                  </div>
+                  <!-- /.description-slider__inner -->
+               </div>
+               <!-- /.description-slider__wrapper -->
+                <div class="description-slider__bg-block"><img src="img/icons/description-slider-bg-circle.svg" alt=""></div>
+                <!-- /.description-slider__bg-block -->
+                <div class="description-slider__switches">
+                  <button class="description-slider__prev">Prev</button>
+                  <button class="description-slider__next">Next</button>
+                </div>
+                <!-- description-slider__switches -->
+              </div>
+              <!-- /.description-slider__body -->
+            </div>
+            <!-- /.container -->
+          </section>
+          <!-- /.description-slider -->
         </main>
         <!-- /.main -->
 
