--- a/#source/index.html
+++ b/#source/index.html
@@ -56,7 +56,7 @@
                       <div class="description-slider-slide__description">
                         <span class="description-slider-slide__type">Old Wines</span>
                         <h2 class="description-slider-slide__title">Shanti</h2>
-                        <span class="description-slider-slide__subtitle"></span>
+                        <span class="description-slider-slide__subtitle">Winehouse Vineyard</span>
                         <p class="description-slider-slide__text">Shanti is loved for its boisterous black cherry flavors, supple
                           tannins, and chocolatey finish. On the high end, it’s often
                           mistaken with Cabernet Sauvignon</p>
@@ -69,7 +69,7 @@
                       <div class="description-slider-slide__description">
                         <span class="description-slider-slide__type">Old Wines</span>
                         <h2 class="description-slider-slide__title">Falcor</h2>
-                        <span class="description-slider-slide__subtitle"></span>
+                        <span class="description-slider-slide__subtitle">Winehouse Vineyard</span>
                         <p class="description-slider-slide__text">Falcor is loved for its boisterous black cherry flavors, supple
                           tannins, and chocolatey finish. On the high end, it’s often
                           mistaken with Cabernet Sauvignon</p>
@@ -82,7 +82,7 @@
                       <div class="description-slider-slide__description">
                         <span class="description-slider-slide__type">New Wines</span>
                         <h2 class="description-slider-slide__title">Mazzei Siepi</h2>
-                        <span class="description-slider-slide__subtitle"></span>
+                        <span class="description-slider-slide__subtitle">Winehouse Vineyard</span>
                         <p class="description-slider-slide__text">Mazzei Siepi is loved for its boisterous black cherry flavors, supple
                           tannins, and chocolatey finish. On the high end, it’s often
                           mistaken with Cabernet Sauvignon</p>
@@ -95,7 +95,7 @@
                       <div class="description-slider-slide__description">
                         <span class="description-slider-slide__type">New Wines</span>
                         <h2 class="description-slider-slide__title">Silver Oak</h2>
-                        <span class="description-slider-slide__subtitle"></span>
+                        <span class="description-slider-slide__subtitle">Winehouse Vineyard</span>
                         <p class="description-slider-slide__text">Silver Oak is loved for its boisterous black cherry flavors, supple
                           tannins, and chocolatey finish. On the high end, it’s often
                           mistaken with Cabernet Sauvignon</p>
