create futured-block and javascript for it

--- a/#source/index.html
+++ b/#source/index.html
@@ -23,7 +23,7 @@
                 <h1 class="preview__heading chb">In each <span class="yellow">bottle</span></h1>
                 <p class="preview__text text">Experience a true “American Dream” at Winehouse and visit the first tasting room in the United
                   States established by a former European mirgant vineyard worker and his family.</p>
-                <a href="#" class="preview__link chb underlined exl"><span class="yellow">READ MORE</span></a>
+                <a href="#" class="read-more preview__link yellow underlined exl">READ MORE</a>
                 <div class="preview__img fit-img">
                   <img src="img/preview-img.png" alt="Vine photo">
                 </div>
@@ -121,6 +121,104 @@
             <!-- /.container -->
           </section>
           <!-- /.description-slider -->
+
+          <section class="futured-block">
+            <div class="container">
+              <div class="futured-block__body">
+                <h2 class="heading futured-block__heading">Futured <span class="yellow">Products</span></h2>
+                <div class="futured-block-tabs futured-block__tabs">
+                  <ul class="futured-block-tabs-navigation futured-block-tabs__navigation">
+                    <li class="futured-block-tabs-navigation__item" data-vines-type="#all">All</li>
+                    <li class="futured-block-tabs-navigation__item" data-vines-type="#red">Red</li>
+                    <li class="futured-block-tabs-navigation__item" data-vines-type="#rose">Rose</li>
+                    <li class="futured-block-tabs-navigation__item" data-vines-type="#white">White</li>
+                  </ul>
+                  <div class="futured-block-tabs__body">
+                  <ul id="all" class="futured-block-tabs-element futured-block-tabs__element">
+                    <li data-vine-type="red" class="futured-block-tabs-element-item futured-block-tabs-element__item">
+                      <div class="futured-block-tabs-element-item__img fit-img"><img src="img/catalog-item-img-1.png" alt="Vine"></div>
+                      <div class="futured-block-tabs-element-item__info">
+                        <h3 class="futured-block-tabs-element-item__title">Silver Oak</h3>
+                        <div class="futured-block-tabs-element-item__price"><span class="futured-block-tabs-element-item__last-price">$500.00</span><span class="futured-block-tabs-element-item__current-price">$450.00</span></div>
+                      </div>
+                      <span class="futured-block-tabs-element-item__label">30% off</span>
+                    </li>
+
+                    <li data-vine-type="red" class="futured-block-tabs-element-item futured-block-tabs-element__item">
+                      <div class="futured-block-tabs-element-item__img fit-img"><img src="img/catalog-item-img-2.png" alt="Vine"></div>
+                      <div class="futured-block-tabs-element-item__info">
+                        <h3 class="futured-block-tabs-element-item__title">2015 Woodenhead</h3>
+                        <div class="futured-block-tabs-element-item__price"><span class="futured-block-tabs-element-item__last-price">$150.00</span><span class="futured-block-tabs-element-item__current-price">$120.00</span></div>
+                      </div>
+                      <span class="futured-block-tabs-element-item__label">45% off</span>
+                    </li>
+
+                    <li data-vine-type="rose" class="futured-block-tabs-element-item futured-block-tabs-element__item">
+                      <div class="futured-block-tabs-element-item__img fit-img"><img src="img/catalog-item-img-3.png" alt="Vine"></div>
+                      <div class="futured-block-tabs-element-item__info">
+                        <h3 class="futured-block-tabs-element-item__title">2014 red hills</h3>
+                        <div class="futured-block-tabs-element-item__price"><span class="futured-block-tabs-element-item__last-price">$1000.00</span><span class="futured-block-tabs-element-item__current-price">$850.00</span></div>
+                      </div>
+                      <span class="futured-block-tabs-element-item__label">20% off</span>
+                    </li>
+
+                    <li data-vine-type="red" class="futured-block-tabs-element-item futured-block-tabs-element__item">
+                      <div class="futured-block-tabs-element-item__img fit-img"><img src="img/catalog-item-img-4.png" alt="Vine"></div>
+                      <div class="futured-block-tabs-element-item__info">
+                        <h3 class="futured-block-tabs-element-item__title">2012 Merlot</h3>
+                        <div class="futured-block-tabs-element-item__price"><span class="futured-block-tabs-element-item__last-price">$500.00</span><span class="futured-block-tabs-element-item__current-price">$450.00</span></div>
+                      </div>
+                      <span class="futured-block-tabs-element-item__label">35% off</span>
+                    </li>
+
+                    <li data-vine-type="red" class="futured-block-tabs-element-item futured-block-tabs-element__item">
+                      <div class="futured-block-tabs-element-item__img fit-img"><img src="img/catalog-item-img-5.png" alt="Vine"></div>
+                      <div class="futured-block-tabs-element-item__info">
+                        <h3 class="futured-block-tabs-element-item__title">2008 Cabernet</h3>
+                        <div class="futured-block-tabs-element-item__price"><span class="futured-block-tabs-element-item__last-price">$500.00</span><span class="futured-block-tabs-element-item__current-price">$450.00</span></div>
+                      </div>
+                      <span class="futured-block-tabs-element-item__label">40% off</span>
+                    </li>
+
+                    <li data-vine-type="rose" class="futured-block-tabs-element-item futured-block-tabs-element__item">
+                      <div class="futured-block-tabs-element-item__img fit-img"><img src="img/catalog-item-img-6.png" alt="Vine"></div>
+                      <div class="futured-block-tabs-element-item__info">
+                        <h3 class="futured-block-tabs-element-item__title">Mazzei Siepi 2016</h3>
+                        <div class="futured-block-tabs-element-item__price"><span class="futured-block-tabs-element-item__last-price">$300.00</span><span class="futured-block-tabs-element-item__current-price">$280.00</span></div>
+                      </div>
+                      <span class="futured-block-tabs-element-item__label">New</span>
+                    </li>
+
+                    <li data-vine-type="rose" class="futured-block-tabs-element-item futured-block-tabs-element__item">
+                      <div class="futured-block-tabs-element-item__img fit-img"><img src="img/catalog-item-img-7.png" alt="Vine"></div>
+                      <div class="futured-block-tabs-element-item__info">
+                        <h3 class="futured-block-tabs-element-item__title">Penfolds uncorks</h3>
+                        <div class="futured-block-tabs-element-item__price"><span class="futured-block-tabs-element-item__last-price">$400.00</span><span class="futured-block-tabs-element-item__current-price">$360.00</span></div>
+                      </div>
+                      <span class="futured-block-tabs-element-item__label">30% off</span>
+                    </li>
+                    
+                    <li data-vine-type="white" class="futured-block-tabs-element-item futured-block-tabs-element__item">
+                      <div class="futured-block-tabs-element-item__img fit-img"><img src="img/catalog-item-img-8.png" alt="Vine"></div>
+                      <div class="futured-block-tabs-element-item__info">
+                        <h3 class="futured-block-tabs-element-item__title">2012 Jacob's</h3>
+                        <div class="futured-block-tabs-element-item__price"><span class="futured-block-tabs-element-item__last-price">$1000.00</span><span class="futured-block-tabs-element-item__current-price">$950.00</span></div>
+                      </div>
+                      <span class="futured-block-tabs-element-item__label">New</span>
+                    </li>
+                  </ul>
+                  
+                  </div>
+                  <!-- /.futured-block-tabs__body -->
+                  <a href="#" class="read-more futured-block-tab__link yellow underlined exl">View MORE</a>
+                </div>
+                <!-- /.futured-block-tab futured-block__tab -->
+              </div>
+              <!-- /.futured-block__body -->
+            </div>
+            <!-- /.container -->
+          </section>
+          <!-- /.futured-block -->
         </main>
         <!-- /.main -->
 
