create reviews block and add javascript for it

--- a/#source/index.html
+++ b/#source/index.html
@@ -219,6 +219,46 @@
             <!-- /.container -->
           </section>
           <!-- /.futured-block -->
+
+          <section class="reviews-block">
+            <div class="container">
+              <div class="reviews-block__body">
+                <h2 class="heading reviews-block__heading">Client <span class="yellow">Review</span></h2>
+                <div class="reviews-block__slider-wrapper">
+                  <ul class="reviews-block__slider-inner">
+                    <li class="reviews-block__slide">
+                      <div class="reviews-block__avatar fit-img"><img src="img/reviews-img-1.jpg" alt="David Luice"></div>
+                      <h3 class="reviews-block__name">David Luice</h3>
+                      <p class="reviews-block__text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget lectus pulvinar venenatis volutpat, lacinia sagittis.
+                        Vulputate habitasse vel nisl, id consequat lacus. Et porttitor vestibulum, blandit quam id. Accumsan lacus,
+                        non tincidunt sed pellentesque facilisi ornare pellentesque ullamcorpe
+                        </p>
+                    </li>
+                    <li class="reviews-block__slide">
+                      <div class="reviews-block__avatar fit-img"><img src="img/reviews-img-2.jpg" alt="Manon Dennis"></div>
+                      <h3 class="reviews-block__name">Manon Dennis</h3>
+                      <p class="reviews-block__text text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, fuga!</p>
+                    </li>
+                    <li class="reviews-block__slide">
+                      <div class="reviews-block__avatar fit-img"><img src="img/reviews-img-3.jpg" alt="Jordyn Newman"></div>
+                      <h3 class="reviews-block__name">Jordyn Newman</h3>
+                      <p class="reviews-block__text text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error nihil amet eum, quaerat architecto accusantium possimus nisi rem alias eaque accusamus, praesentium id quibusdam. Unde ab assumenda laudantium reiciendis repellat.</p>
+                    </li>
+                    <li class="reviews-block__slide">
+                      <div class="reviews-block__avatar fit-img"><img src="img/reviews-img-4.jpg" alt="Daisy Couch"></div>
+                      <h3 class="reviews-block__name">Daisy Couch</h3>
+                      <p class="reviews-block__text text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum harum, perspiciatis quo deleniti autem eligendi voluptatem, consequatur at, quod laboriosam facilis quaerat asperiores! Deserunt assumenda explicabo dolores incidunt accusamus temporibus nostrum aspernatur, omnis, eveniet at sit obcaecati maiores dolor enim!</p>
+                    </li>
+                  </ul>
+                  <!-- /.reviews-block__slider-inner -->
+                </div>
+                <!-- /.reviews-block__slider-wrapper -->
+              </div>
+              <!-- /.reviews-block__body -->
+            </div>
+            <!-- /.container -->
+          </section>
+          <!-- /.reviews-block -->
         </main>
         <!-- /.main -->
 
